--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <title>Rummy Score Tracker</title>
+  <title>RUMMY POINTS POWERED BY GOFLEXER</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -29,5 +29,11 @@
     </table>
   </div>
   <script src="script.js"></script>
+  <div class="scrolling-quote">
+    <marquee behavior="scroll" direction="left">
+      GUYS WE ARE RELEASING OUR GOFLEXER BOT SOON, YOU CAN BOOK AMAZON BLOCKS EASILY WITH OUR APP, IT IS FAST, SECURE and WORTHY
+    </marquee>
+  </div>
+  
 </body>
 </html>
