--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
   </div>
   <script src="script.js"></script>
   <div class="scrolling-quote">
-    <marquee behavior="scroll" direction="left">
+    <div class="scrolling-text">
       GUYS WE ARE RELEASING OUR GOFLEXER BOT SOON, YOU CAN BOOK AMAZON BLOCKS EASILY WITH OUR APP, IT IS FAST, SECURE and WORTHY
-    </marquee>
+    </div>
   </div>
+  
   
 </body>
 </html>
