--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>Rummy Score Tracker</h1>
+    <h1>GOFLEXER RUMMY POINTS CALCULATOR</h1>
     <div class="controls">
       <button id="addPlayer">Add Player</button>
       <button id="addRound">Add Round</button>
@@ -27,6 +27,10 @@
         <!-- Table rows will be dynamically generated -->
       </tbody>
     </table>
+    <div id="lowestPlayer" class="lowest-player">
+      <!-- Lowest player's name and score will appear here -->
+    </div>
+    
   </div>
   <script src="script.js"></script>
   
