--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>GOFLEXER RUMMY POINTS CALCULATOR</h1>
+    <h1>GOFLEXER RUMMY POINTS</h1>
     <div class="controls">
       <button id="addPlayer">Add Player</button>
       <button id="addRound">Add Round</button>
